INT-14332: Fix for spacing between all but first two radio buttons in settings

--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,7 @@
     background: #db4221;
     color: #fff;
 }
+
+.turnitinsim_settings_radio {
+    margin-right: 0;
+}
